# KNLP

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ccpp.yml
LanguageModel/: BigramLanguaModel.h  UnigramLanguageModel.h
Optimizer/: LBFGS.h
PosTag/: HMMPosTag.h  dataset.h
Segmenter/: BigramDAGSegmenter.h  CRFSegmenter.h  DAGSegmenter.h  HMMSegmenter.h  MixedSegmenter.h  SentenceDAG.h
Test/: CMakeLists.txt  test_main.cpp  test_mixed_segmenter.h  test_pos_tag.h
Utils/: DAG.h  HashDictionary.h
